--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,19 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_icon_store"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Order.DetailOrderActivity"></activity>
+        <activity android:name=".AddOrder.AddOrderActivity"></activity>
+        <activity android:name=".Order.DetailOrderActivity" />
         <activity android:name=".Network.NoConnectionActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Login.LoginActivity">
+        <activity
+            android:name=".Login.LoginActivity"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
